# CPCCore

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
AmstradCore/: AY8912.cpp  AY8912.h  BusLine.cpp  BusLine.h  CMakeLists.txt  CRTC_0.cpp  CRTC_0.h  GateArray.cpp  GateArray.h  IComponent.h  Motherboard.cpp  Motherboard.h  PPI8255.cpp  PPI8255.h  Sampler.cpp  Sampler.h  SingleLineSample.cpp  SingleLineSample.h  Z80.cpp  Z80.h  Z80Disassembler.cpp  Z80Disassembler.h  Z80_Opcodes_fetch.cpp
AmstradCoreTests/: CMakeLists.txt  Test_GateArray.cpp  Test_Z80.cpp
CPCCoreEmu/: Asic.cpp  Asic.h  Breakpoint.cpp  Breakpoint.h  BreakpointHandler.cpp  BreakpointHandler.h  BreakpointToken.cpp  BreakpointToken.h  Bus.cpp  Bus.h  CAPSFile.cpp  CAPSFile.h  CMakeLists.txt  CRC.cpp  CRC.h  CRTC.cpp  CRTC.h  CRTC_0.cpp  CRTC_1.cpp  CRTC_2.cpp  CRTC_3_4.cpp  ClockLine.cpp  ClockLine.h  DMA.cpp  DMA.h  DMAStop.h  DiskBuilder.cpp  DiskBuilder.h  DiskContainer.cpp  DiskContainer.h  DiskGen.cpp  DiskGen.h  DskTypeManager.cpp  DskTypeManager.h  EmulatorSettings.cpp  EmulatorSettings.h  FDC.cpp  FDC.h  FDC765.h  FileAccess.cpp  (+136 more)
ShakerGenerator/: CMakeLists.txt  Display.cpp  Display.h  TestConf_1.ini  TestConf_2.ini  TestConf_3.ini  TestConf_4.ini  TestUtils.cpp  TestUtils.h  Test_Shaker_generation.cpp
ShakerGenerator/Script/: CSLScriptRunner.cpp  CSLScriptRunner.h  Commands.cpp  Commands.h  ICommand.h  IScriptRunner.h
SugarboxBenchmarks/: CMakeLists.txt  Display.cpp  Display.h  TestUtils.cpp  TestUtils.h  benchmark.cpp
UnitTests/: ASIC.cpp  CMakeLists.txt  Cartridge.h  Display.cpp  Display.h  PLUS.cpp  Test.cpp  TestAutorun.cpp  TestConf.ini  TestContainers.cpp  TestFDC.cpp  TestSettings.cpp  TestUtils.cpp  TestUtils.h  TestZ80.cpp  TestZ84C30.cpp  Test_Dumps.cpp  Test_Dumps_tape.cpp  Test_Shaker_generation.cpp  test.cpp
UnitTests/CONF/: CPC6128PLUSEN.cfg  CPC6128PLUSFR.cfg  CPC6128PLUSFRPARADOS.cfg  GX4000.cfg  KeyboardMaps.ini
UnitTests/Expected/: SugarConvHelp.txt
UnitTests/Ressources/Dumps/: Discology 6.0 Plus.scp.IPF  ImperialMahjong.hfe
UnitTests/res/: 1942.raw  30YMD double sides 1 and 2.hfe  After Burner (UK) (1988) [Activision SEGA] (Pre-release).ipf  Airwolf (1985)(Elite)[cr XOR][t +3 XOR].dsk  Basil The Great Mouse Detective (UK) (1987) [Original] [TAPE].cdt  DEATHSWORD128K.DSK  Discology60PlusA1 [MAXIT][SAMdisk36B19][Original].dsk  Mask_1_1.csw  TestConf.ini  Ultima Ratio (Firebird)(UK)(1987)[Original][TAPE].csw  necro.sfw
UnitTests/res/After Burner/: track00.0.raw  track01.0.raw  track02.0.raw  track03.0.raw  track04.0.raw  track05.0.raw  track06.0.raw  track07.0.raw  track08.0.raw  track09.0.raw  track10.0.raw  track11.0.raw  track12.0.raw  track13.0.raw  track14.0.raw  track15.0.raw  track16.0.raw  track17.0.raw  track18.0.raw  track19.0.raw  track20.0.raw  track21.0.raw  track22.0.raw  track23.0.raw  track24.0.raw  track25.0.raw  track26.0.raw  track27.0.raw  track28.0.raw  track29.0.raw  track30.0.raw  track31.0.raw  track32.0.raw  track33.0.raw  track34.0.raw  track35.0.raw  track36.0.raw  track37.0.raw  track38.0.raw  track39.0.raw  (+2 more)
UnitTests/res/CART/: Eerie_Forest_(Logon_System_2017).cpr
UnitTests/res/DSK/: APB - All Points Bulletin (UK) (1989) [Original].dsk  Ace Of Aces (UK) (1985) [Original] (Weak Sectors).dsk  After Burner (UK) (1988) (UK retail version) (CPM) [Original] (Weak Sectors).dsk  Anglais College 4e-3e (UK) (Face A) (1988) [Original].dsk  ArcheCapitaineBlood.ipf  Asterix Et La Potion Magique_KBI-10.raw  Bad Cat (UK) (Face A) (1987) [Original] (Weak Sectors) (GAPS).dsk  Balade Outre-Rhin (F,G) (1986) (CPM) [Original].dsk  Barbarian (1987)(Palace Software)(Disk 1 of 2)[a].dsk  Barbarian 2 (1989)(Palace Software).dsk  Basun (UK) (CPM) [Copia] (no funciona).dsk  Bobby Bearing (UK) (1986) (CPM) [Original] (GAPS).dsk  Bobby Bearing (UK) (1986) (CPM) [Original].dsk  Castle Master (1990)(Domark)(Sp).dsk  Catch 23 (UK) (1987) (CPM) [Original].dsk  Chicago 90 [MAXIT][SAMdisk37][Original][GAPS].dsk  Corsarios (UK) (1988) (CPM) [Original].dsk  Cosa Nostra (F) (1986) (CPM) [Original].dsk  Crazy Cars [MAXIT][SAMDisk383][Original].dsk  DaleyThompson'sOC.ipf  DaleyThompson'sOC.raw  Dark Sceptre (UK) (1988) (CPM) [Original].dsk  Despotik Design [MAXIT][SAMdisk388][Original][ALLGAPS].dsk  Dizzy II - Treasure Island Dizzy (UK) (1989) [Original].raw  Dogfight 2187_Ariolasoft.raw  E.X.I.T (F) (Face A) (1988) [Original].dsk  E.X.I.T (F) (Face B) (1988) [Original].dsk  Emlyn Hughes Arcade Quiz (UK) (1991) (CPM) [Original].dsk  Every Second Counts (UK) (1988) (CPM) [Original].dsk  Fer & Flamme (F) (Face 1) (1986) [Original] (Weak Sectors).dsk  Fighter Bomber (UK) (Face A) (1989) (UK retail version) [Original].dsk  Fire !.raw  Fugitif [1A][MAXIT][SAMdisk38][Original].dsk  Fugitif [1B][MAXIT][SAMdisk38][Original].dsk  Gryzor (UK) (1987).dsk  Guadalcanal (UK) (1987) (CPM) [Original] (Weak Sectors).dsk  International Karate Plus (UK) (1988) (CPM) [Original] (Weak Sectors).dsk  Krypton Factor (UK) (Face A) (1987) (CPM) [Original].dsk  LArche Du Captain Blood (UK,F,G,S,I) (1988) (CPM) [Original].dsk  La Bosse Des Maths 3eme (F) (128K) (Face A) (1987) (CPM) [Original].dsk  (+75 more)
UnitTests/res/FDC/: fdctest.dsk
UnitTests/res/Shaker/: shaker24.dsk  shaker25.dsk  shaker_addon.dsk
UnitTests/res/Tape/: 007 The Living Daylights (UK) (1987) (Spain retail version) [Original] [TAPE].cdt  007 The Living Daylights (UK) (1987) (UK retail version) [Original] [TAPE].cdt  10 Great Games II (UK) (Face 1A) (1988) (01. Death Wish 3) [Original] [TAPE] [COMPILATION].cdt  10th_Frame__RERELEASE_KIXX.cdt  12 Jeux Exceptionnels (UK) (Face 2B) (1988) (12. Mask) [Original] [TAPE] [COMPILATION].cdt  1942 + Batty (UK) (1989) (Spain retail version) [Original] [TAPE] [COMPILATION].cdt  3D Starfighter (UK) (1987) [Original] [TAPE].cdt  750cc Grand Prix (UK) (1989) [Original] [TAPE].cdt  Adidas Championship Tie Break (UK) (1990) [Original] [TAPE].cdt  After The War  (UK) (Face 1) (1989) [Original] [TAPE].cdt  After The War (S) (Face A) (1989) [Original] [TAPE].cdt  (+56 more)
(+108 files in other folders)
